# adk-agent-quickstart

./: .gitignore  README copy.md  README.md  THOUGHT_PROCESS_FIX.md  app_data.db  main.py  pyproject.toml
adk_web_agent/: .env.example  agent.py  app_data.db  main.py
adk_web_agent/.adk/: session.db
adk_web_agent/auth/: __init__.py  jwt_helper.py  middleware.py  password.py
adk_web_agent/database/: __init__.py  db.py  schema.sql
adk_web_agent/routes/: admin.py  auth.py  sessions.py
adk_web_agent/tools/: __init__.py  analysis_tools.py  research_tools.py  summary_tools.py  thinking_middleware.py  thought_tools.py
