[project]
name = "adk-copilotkit-quickstart"
version = "0.1.0"
description = "Google ADK Agent CoPilotKit Quickstart Example"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ag-ui-adk>=0.4.2",
    "fastapi>=0.128.4",
    "google-adk>=1.24.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
